<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prmiary_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="@dimen/layout_height_60dp"
        android:layout_marginTop="@dimen/layout_marginTop_70dp"
        android:background="@color/primary_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSearchWeather"
            android:layout_width="@dimen/layout_width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart_16dp"
            android:layout_marginEnd="@dimen/layout_marginEnd_16dp"
            android:autofillHints=""
            android:background="@color/primary_editText"
            android:ems="10"
            android:hint="@string/search_location"
            android:inputType="textPersonName"
            android:minHeight="@dimen/minHeight_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/close_modal"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart_16dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progress_bar_search"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/layout_width_24dp"
            android:layout_height="@dimen/layout_height_24dp"
            android:layout_marginEnd="16dp"
            android:indeterminateTint="@color/icons"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="@dimen/layout_width_24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_close_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_search"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/close_modal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_16dp"
        android:layout_marginTop="@dimen/layout_marginTop_24dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/image_empty_state"
        android:layout_width="@dimen/layout_width_205dp"
        android:layout_height="@dimen/layout_height_191dp"
        android:layout_marginTop="@dimen/layout_marginTop_24dp"
        android:src="@drawable/ic_empty_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_state_label"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/empty_state_label"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_16dp"
        android:layout_marginTop="@dimen/layout_marginTop_32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/not_found_data"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_24sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>