...
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="City Name" />

        <TextView
            android:id="@+id/textView_location_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart_16dp"
            android:layout_marginTop="@dimen/layout_marginTop_2dp"
            android:textColor="#FFF"
            android:textSize="@dimen/textSize_12sp"
...
